# EU-Legal-Benchmark

./: .env.example  .gitignore  LICENSE  README.md  build_for_eval.py  config.example.yaml  pyproject.toml  run.py
data/curated/: apexv1_legal_europe.jsonl  includebase_europe_law.jsonl  lar_echr_tough_17.jsonl  lexam_swiss_tough_diverse.jsonl  prbench_legal_hard_europe.jsonl
data/for_eval/: merged_legal_eval_v1.jsonl
docs/: DATA_SCHEMA.md  EXECPLAN.md  POLICIES.md
docs/benchmarks/: LEXam_prompts_and_judge_findings.md  PRBench_prompts_and_judge_findings.md  apex_v1_prompts_and_judge_findings.md
scripts/: __init__.py  backfill_run.py  merge_backfill.py
src/: __init__.py  cache.py  config.py  retry.py  setup_checks.py  types.py
src/data/: __init__.py  attachments.py  build_for_eval.py  loader.py  policies.py  schema.py
src/io/: __init__.py  json_io.py
src/judge/: __init__.py  judge.py  mcq.py  parsing.py
src/prompting/: __init__.py  templates.py
src/providers/: __init__.py  base.py  google_genai.py  litellm.py
src/runner/: __init__.py  bootstrap.py  context.py  contracts.py  generation.py  helpers.py  judging.py  (+8 more)
tests/: conftest.py  test_attachments.py  test_build_for_eval_jsonl.py  test_generation_failfast.py  test_litellm_provider.py  test_loader_canonical.py  test_mcq_grading.py  test_multi_judge_rubric.py  test_prompt_policies.py  test_retry.py  test_run_interrupt.py  test_run_progress.py  test_run_rate_limit.py  test_run_two_phase_flow.py  test_schema_jsonl_validation.py  test_setup_provider_profiles.py  test_weighted_rubric_aggregation.py
(+41 files in other folders)
